--- a/index.html
+++ b/index.html
@@ -1,24 +1,34 @@
+
+もっと長いサンプルコードを作成しましょう。以下は、さらに多くの要素や機能を含んだサイトのサンプルコードです。
+
+html
+Copy code
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サンプルサイト</title>
+    <title>包括的なサンプルサイト</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Reset CSS */
+        body, h1, h2, h3, p, ul, li {
             margin: 0;
             padding: 0;
-            background-color: #f2f2f2;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f8f9fa;
+            color: #343a40;
         }
         header {
-            background-color: #333;
+            background-color: #007bff;
             color: #fff;
             padding: 20px;
             text-align: center;
         }
         nav {
-            background-color: #444;
+            background-color: #343a40;
             padding: 10px;
             text-align: center;
         }
@@ -29,41 +39,100 @@
         }
         section {
             padding: 20px;
-            margin: 20px;
+            margin: 20px auto;
+            max-width: 1200px;
             background-color: #fff;
             border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .grid-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+        }
+        .card {
+            background-color: #f8f9fa;
+            padding: 15px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
         footer {
-            background-color: #333;
+            background-color: #007bff;
             color: #fff;
             text-align: center;
             padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        }
+        footer p {
+            margin: 5px 0;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>サンプルサイト</h1>
+        <h1>包括的なサンプルサイト</h1>
     </header>
     <nav>
         <a href="#">ホーム</a>
-        <a href="#">サービス</a>
         <a href="#">製品</a>
+        <a href="#">サービス</a>
         <a href="#">お問い合わせ</a>
+        <a href="#">会社概要</a>
+        <a href="#">ニュース</a>
     </nav>
     <section>
-        <h2>セクション1</h2>
-        <p>ここにコンテンツが入ります。</p>
+        <h2>特徴</h2>
+        <p>当サイトの特徴を紹介します。</p>
+        <div class="grid-container">
+            <div class="card">
+                <h3>高品質な製品</h3>
+                <p>当社の製品は高品質で信頼性が高いです。</p>
+            </div>
+            <div class="card">
+                <h3>優れたサービス</h3>
+                <p>顧客満足度を第一に、優れたサービスを提供します。</p>
+            </div>
+            <div class="card">
+                <h3>迅速な対応</h3>
+                <p>お問い合わせやサポートに迅速に対応いたします。</p>
+            </div>
+            <div class="card">
+                <h3>安心の保証</h3>
+                <p>製品には充実の保証サービスが付いています。</p>
+            </div>
+            <div class="card">
+                <h3>環境にやさしい</h3>
+                <p>環境への配慮を大切にし、持続可能な製品を提供しています。</p>
+            </div>
+            <div class="card">
+                <h3>お得な特典</h3>
+                <p>会員登録すると特別な割引やキャンペーンに参加できます。</p>
+            </div>
+        </div>
     </section>
     <section>
-        <h2>セクション2</h2>
-        <p>ここにもコンテンツが入ります。</p>
+        <h2>お知らせ</h2>
+        <ul>
+            <li><strong>2024年4月28日:</strong> サンプルサイトを公開しました。</li>
+            <li><strong>2024年4月30日:</strong> 新製品の発売が決定しました。</li>
+            <li><strong>2024年5月5日:</strong> ゴールデンウィークセール開催中！</li>
+            <li><strong>2024年5月10日:</strong> サイトリニューアル予告：より使いやすくなります。</li>
+            <li><strong>2024年5月15日:</strong> 新しいブログ記事が投稿されました。</li>
+        </ul>
+    </section>
+    <section>
+        <h2>お問い合わせフォーム</h2>
+        <form action="#" method="POST">
+            <label for="name">お名前:</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="email">メールアドレス:</label><br>
+            <input type="email" id="email" name="email" required><br>
+            <label for="message">メッセージ:</label><br>
+            <textarea id="message" name="message" rows="4" required></textarea><br>
+            <button type="submit">送信</button>
+        </form>
     </section>
     <footer>
-        <p>© 2024 サンプルサイト. All Rights Reserved.</p>
+        <p>© 2024 包括的なサンプルサイト. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
