--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>包括的なサンプルサイト</title>
+    <title>福井大学編入生サークル</title>
     <style>
         /* Reset CSS */
         body, h1, h2, h3, p, ul, li {
@@ -64,7 +64,7 @@
 </head>
 <body>
     <header>
-        <h1>包括的なサンプルサイト</h1>
+        <h1>福井大学編入生サークル</h1>
     </header>
     <nav>
         <a href="#">ホーム</a>
